<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MotherShip</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="calendar">Calendar</string>
    <string name="twitter_feed">Twitter Feed</string>
    <string name="lakehurst_ledger">Lakehurst Ledger</string>
    <string name="contact_list">Contact List</string>
    <string name="egencia">Egencia</string>

</resources>
